--- a/templates/default/document/documentlist.html
+++ b/templates/default/document/documentlist.html
@@ -353,8 +353,12 @@
 					<td colspan="2">
 						{button icon="print" label="Print" id="print-documents"}
 						<label>
-							<input type="checkbox" name="attachments" value="1" form="page-form">
-							{trans("attachments")}
+							<input type="checkbox" id="print-attachments" name="attachments" value="1" form="page-form">
+							{trans("with all attachments")}
+						</label>
+						<label>
+							<input type="checkbox" id="print-protocols" name="protocols" value="1" form="page-form">
+							{trans("with protocols")}
 						</label>
 					</td>
 				</tr>
@@ -366,6 +370,20 @@
 </TABLE>
 
 <script>
+
+	$('#print-attachments').on('change', function () {
+		let that = $(this);
+		$('#print-protocols').prop('disabled', function (index, oldproperty) {
+			return that.is(':checked') ? true : false;
+		});
+	});
+
+	$('#print-protocols').on('change', function () {
+		let that = $(this);
+		$('#print-attachments').prop('disabled', function (index, oldproperty) {
+			return that.is(':checked') ? true : false;
+		});
+	});
 
 	$('#send-documents').click(function() {
 		if (!$(this).closest('tfoot').prev('.lms-ui-multi-check').find('input.lms-ui-multi-check:checked').length) {
