bugfix: don't preselect default address as recipient address during customer change in invoice edit form

--- a/templates/default/invoice/invoiceedit.html
+++ b/templates/default/invoice/invoiceedit.html
@@ -292,7 +292,7 @@
 				addresses = $.extend(addr, addresses);
 			{/if}
 
-			setAddressList('#customer_addresses', addresses, true);
+			setAddressList('#customer_addresses', addresses);
 		});
 		updateDocumentFlags();
 	}
