--- a/userpanel/modules/documents/templates/setup.html
+++ b/userpanel/modules/documents/templates/setup.html
@@ -165,6 +165,7 @@
 											<strong>%pin%</strong> - customer pin code,<br>
 											<strong>%customername%</strong> - full customer name,<br>
 											<strong>%docid%</strong> - document identifier,<br>
+											<strong>%document%</strong> - document number,<br>
 											<strong>%date-y%</strong> - date to which we wait for customer action (year),<br>
 											<strong>%date-m%</strong> - date to which we wait for customer action (month),<br>
 											<strong>%date-d%</strong> - date to which we wait for customer action (day).
