bugfix: sidusis: fixed jump to manually entered page

--- a/templates/default/net/netranges.html
+++ b/templates/default/net/netranges.html
@@ -302,7 +302,7 @@
         {if $pagination->getTotal() != 0}
             <tr>
                 <td class="lms-ui-pagination" colspan="7">
-                    {include file="pagination.html"}
+                    {include file="pagination.html" form="netranges"}
                 </td>
             </tr>
         {/if}
@@ -510,7 +510,7 @@
         {if $pagination->getTotal() != 0}
             <tr>
                 <td class="lms-ui-pagination" colspan="7">
-                    {include file="pagination.html"}
+                    {include file="pagination.html" form="netranges"}
                 </td>
             </tr>
         {/if}
