--- a/templates/default/document/documentlist.html
+++ b/templates/default/document/documentlist.html
@@ -184,8 +184,8 @@
 							<OPTION value="-1">{trans("— all —")} </OPTION>
 							<OPTION value="0"{if $filter.status == 0} selected{/if}>{trans("unconfirmed")}</OPTION>
 							<OPTION value="1"{if $filter.status == 1} selected{/if}>{trans("confirmed")}</OPTION>
-							<OPTION value="4"{if $filter.status == 4} selected{/if}>{trans("confirmed (signed document scan)")}</OPTION>
-							<OPTION value="5"{if $filter.status == 5} selected{/if}>{trans("confirmed (sms authorization)")}</OPTION>
+							<OPTION value="4"{if $filter.status == 5} selected{/if}>{trans("confirmed (signed document scan)")}</OPTION>
+							<OPTION value="5"{if $filter.status == 4} selected{/if}>{trans("confirmed (sms authorization)")}</OPTION>
 							<OPTION value="2"{if $filter.status == 2} selected{/if}>{trans("review (signed document scan)")}</OPTION>
 							<OPTION value="3"{if $filter.status == 3} selected{/if}>{trans("waiting for signed document scan")}</OPTION>
 						</SELECT>
@@ -239,11 +239,11 @@
 		<TD class="nobr" data-target-url="{$url}">
 			{$doc.username|escape}
 			{if $doc.cuserid} / {$doc.cusername|escape}{/if}
-			{if $doc.closed == 3}
+			{if $doc.closed == $smarty.const.DOC_CLOSED_AFTER_CUSTOMER_SMS}
 				{if !$doc.cuserid}
 					{icon name="sms" tip="customer has accepted document via sms"}
 				{/if}
-			{elseif $doc.closed == 2}
+			{elseif $doc.closed == $smarty.const.DOC_CLOSED_AFTER_CUSTOMER_SCAN}
 				{icon name="sign" tip="attached document scans with customer signature"}
 			{/if}
 			<BR><B>{assign var=type value=$doc.type}{$_DOCTYPES.$type}</B>
