--- a/userpanel/modules/documents/style/bclean/templates/documents.html
+++ b/userpanel/modules/documents/style/bclean/templates/documents.html
@@ -100,6 +100,7 @@
 				<th>{trans("Type:")}</th>
 				<th>{trans("Created:")}</th>
 				<th>{trans("Period:")}</th>
+				<th>{trans("Confirmation")}</th>
 				<th>&nbsp;</th>
 			</thead>
 		{/if}
@@ -121,6 +122,15 @@
 							{/if}
 							{trans("indefinitely")}
 						{/if}
+					{/if}
+				</td>
+				<td>
+					{if $doc.confirm_type == $smarty.const.DOC_CLOSED_AFTER_CUSTOMER_SMS}
+						{icon name="sms"}
+						{$doc.confirm_date|date_format:'Y/m/d H:i:s'}
+					{elseif $doc.confirm_type == $smarty.const.DOC_CLOSED_AFTER_CUSTOMER_SCAN}
+						{icon name="sign"}
+						{$doc.confirm_date|date_format:'Y/m/d H:i:s'}
 					{/if}
 				</td>
 				<td>
@@ -171,7 +181,7 @@
 			</tr>
 		{foreachelse}
 			<tr>
-				<td colspan="5" class="text-center">
+				<td colspan="6" class="text-center">
 					{trans("No such documents on your account.")}
 				</td>
 			</tr>
