--- a/userpanel/modules/documents/templates/documents.html
+++ b/userpanel/modules/documents/templates/documents.html
@@ -231,9 +231,10 @@
 	<tr class="darkest">
 		<td width="25%" class="nobr"><strong>{trans("Number:")}</strong></td>
 		<td width="15%" class="nobr"><strong>{trans("Type:")}</strong></td>
-		<td width="20%" class="nobr"><strong>{trans("Created:")}</strong></td>
-		<td width="20%" class="nobr"><strong>{trans("Period:")}</strong></td>
-		<td width="20%" class="nobr">&nbsp;</td>
+		<td width="15%" class="nobr"><strong>{trans("Created:")}</strong></td>
+		<td width="15%" class="nobr"><strong>{trans("Period:")}</strong></td>
+		<td width="15%" class="nobr"><strong>{trans("Confirmation")}</strong></td>
+		<td width="15%" class="nobr">&nbsp;</td>
 	</tr>
 	{/if}
 	{cycle values="light,lucid" print=false name=doc}
@@ -248,6 +249,15 @@
 			{if $doc.fromdate}{$doc.fromdate|date_format:"Y-m-d"}{/if}
 			{if $doc.todate} - {$doc.todate|date_format:"Y-m-d"}{else}{if $doc.fromdate} - {/if}{trans("indefinitely")}{/if}
 		{/if}
+		</td>
+		<td>
+			{if $doc.confirm_type == $smarty.const.DOC_CLOSED_AFTER_CUSTOMER_SMS}
+				{icon name="sms"}
+				{$doc.confirm_date|date_format:'Y/m/d H:i:s'}
+			{elseif $doc.confirm_type == $smarty.const.DOC_CLOSED_AFTER_CUSTOMER_SCAN}
+				{icon name="sign"}
+				{$doc.confirm_date|date_format:'Y/m/d H:i:s'}
+			{/if}
 		</td>
 		<td class="nobr" align="right">
 		{if $doc.closed || ($doc.confirmdate > 0 && $doc.confirmdate >= $smarty.now) || $doc.confirmdate == -1}
@@ -293,7 +303,7 @@
 	</tr>
 	{foreachelse}
 	<tr>
-		<td align="center" width="100%" colspan="8">
+		<td align="center" width="100%" colspan="6">
 			<p>&nbsp;</p>
 			<p><strong>{trans("No such documents on your account.")}</strong></p>
 			<p>&nbsp;</p>
